# sapio-studio

./: .eslintrc.json  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config-overrides.js  package.json  tsconfig.base.json  tsconfig.json  tsconfig.node.json
contrib/settings-generator/: Cargo.toml
contrib/settings-generator/src/: main.rs
desktop/: bitcoin_rpc.ts  chat.ts  createMenu.js  createMenu.ts  declarations.d.ts  devtools.ts  handlers.js  handlers.ts  main.js  main.ts  preload.js  preload.ts  sapio.js  sapio.ts  sapio_args.ts  settings.js  settings.ts  settings_gen.ts  setup.js
examples/data/: vault.json  vault2.json
public/: index.html
react-backend/: .gitignore  app.js  package.json
react-backend/routes/: create_batchpay.js  create_vault.js  gettransactions.js  submitrawtransaction.js  users.js
src/: App.css  App.js  App.tsx  AppNavbar.js  AppSlice.tsx  BitcoinNode.js  BitcoinNode.ts  ContractCompilerServer.js  ContractManager.js  ContractManager.ts  CreateVaultModal.js  Data.js  DemoCanvasWidget.tsx  EntityViewer.js  EntityViewer.tsx  Glyphs.css  Hex.js  InputDetail.js  ModelManager.tsx  OutputDetail.js  OutputLink.js  SideModal.css  Simulation.css  Simulation.tsx  SimulationSlice.tsx  SpendLink.js  Transaction.css  Transaction.js  Transaction.ts  TransactionDetail.js  UTXO.js  UTXO.ts  UTXODetail.js  Vault.js  VaultManager.js  emojis.ts  index.css  index.tsx  serviceWorker.js  setupProxy.js  (+3 more)
src/Compiler/: AppSelector.tsx  ContractCompilerServer.js  ContractCompilerServer.ts  Menu.js
src/Data/: BitcoinNode.ts  BitcoinStatusBar.css  UTXO.ts  (+9 more)
(+147 files in other folders)
