[package]
name = "settings-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sapio-bitcoin = "0.28.0-rc.3"
serde_json = "1.0.79"
serde = "1.0.136"


[dependencies.schemars]
version = "0.8.8"
features=["preserve_order"]